tests/baselines/reference/numeric-separator-literal-dot-nsl-ep-err.errors.txt
numeric-separator-literal-dot-nsl-ep-err.ts(30,1): error TS1128: Declaration or statement expected.
numeric-separator-literal-dot-nsl-ep-err.ts(30,2): error TS2304: Cannot find name '_e1'.


==== numeric-separator-literal-dot-nsl-ep-err.ts (2 errors) ====
    // Copyright (C) 2017 the V8 project authors. All rights reserved.
    // This code is governed by the BSD license found in the LICENSE file.
    
    /*---
    esid: prod-NumericLiteralSeparator
    description: >
      NumericLiteralSeparator may not appear between `.` and ExponentPart
    info: |
      NumericLiteralSeparator ::
        _
    
      DecimalLiteral ::
        . DecimalDigits ExponentPart_opt
    
      DecimalDigits ::
        ...
        DecimalDigits NumericLiteralSeparator DecimalDigit
    
      ExponentIndicator :: one of
        e E
    
    negative:
      phase: parse
      type: SyntaxError
    
    features: [numeric-separator-literal]
    ---*/
    
    
    ._e1
    ~
!!! error TS1128: Declaration or statement expected.
     ~~~
!!! error TS2304: Cannot find name '_e1'.
    